@@ -19,7 +19,7 @@ func init() {
 	// Packed Files
 	// spec/filebeat.yml
 	// spec/metricbeat.yml
-	unpacked := packer.MustUnpack("eJzsmM+To7gVx+/5M+aaVAJi3bWkag+GXgTYTY/pbknohiQbsCXsNPgHpPK/pwTGxu7Z2ZnJJqccumzT+vH03ve99xH//FTtlvxvq0Iu2TKt/9oo+envn5jyavq6zWIlK4pDmZDFLAHm5rlwVIpPMlEoF9NdzpVonwuHBYXpBcUxC8pICh8d50pW7GUimfIKBtHmM6Y58yPZjbkfW8aSEadKSCznCu0THFYUL2yqvIqDt2LuTov5W//JsLdPsJAMo71wJzUDsfxMsppDb502pmIQSeEGVeAGdfyiP8M6wZOcAlRTPDHG6ws/NOnLzdiKAVGmeFLO1UkKharPOJZJicpAGjNeooqSpwe3MDKq5E/EigyuUM5et9nSMmbzF2fH1E4mVrxK8WRDSfbgFtMscB1jSRz5XDh6/dbNtnUA5T5VaC08uxV+KBNsrrgfHhKAWg7s5jnbZoE7zRiYrBJg76k67RJr8aDncYAa4dk5LWPJz+OEL486XgzaJT9utS11QqbD/seExNvnwtmx0jGF/zTTcwI/NBlE7bDX/MVZM8uZEOBVzLMNZtpVSiJj+H8/Jz48F85gc9uvP/0NWycHZk1nl7muI5cwktxfPAReVXArbij2at50vt/RLm7hRTO9RpyGgUhyKzrw8qkgiztbrfhAwGnHrcXD2JaUxFLHZexTfvzRc1x8XlBMD1y9zbQGeKclUw7+oWV40HumeHIUJG6H2LP2+uxy5j5GcunHTYIjoz9DvOrs7jT2pbhFd/Y6OwFR/fEct3v2ejNz/rg9x93JBcz6c/nIGPxy1XfnhzrobJu0DHoGfd2O4zjY1en6xnfYO3KImhvN6Odal22vz/F4rQmhdC7bXV3pc4TPxnMDiECXu1ZkUCj33XlhvGN3e1BCJSsXBwGjo7YtudHeeB204Y/bTOD4eGeL3vtAob1OAWqeC2fDQPROSXC3zulAG7uhON5x024ZtC19rufC6Z8dP559bkUTDk4H2m4zbsl25Ic68EPJsA0ost8p2dzqGKDJc+GYHKAVs5Ch4/Ud8zYJiXMOfmzOXE1yhlGrayu95l1DsXkQCq268eMYwFouX7cZhZ6RkEgKd9LlR68/umN+LLm0QYJP5lVnTkt1P7HiA19/yJ3OxsCPJxy+nbWr+wiSvB30aGS3vuw1cv2NNnx6sX2kCSMb4jz2DYWyHa3Vx+x4md8+Xb/vKYmVjv1lPMwN4Tv/4MC+7g9/bqM1ygWOd+JqR74sUUNxr8fUR8V1fFQxC22osk2m4mZ59XvJgF0yiI4Ch63AweUcKfBUCn6dnftSJSBqiHXnJz+SDKK1gHbzoQ8MccOTPFEnSc92CuVVAt/0B4OX6BzP6MD9QT+O4squP/aXrsaOeKGrefq3QUnwMf7lqPZovUBUUOxdtQttU/iOOfLjOyWy1Weii52VQqRrQ5CQKNR1kTeZXJr1dX93MtRRsXrZZGGRZC/Qa18165DomOBIzlxxECQ+CrIo5+60pPiUcyveJVYkExKuU5dXgSv6PG94pW0LQZ1TVedhc8xCrRcr0vrfhs1m9ukvPV6pZf1e8C8A1itGBldyfQaqNcO64ZhS+OEuAWfwImFXPHFzAZWWktjk+kDQ2F8C92iqBJ/aO6gZxhoUm8eumP8emCkzZ8orKTZ1Qd0zbG/oq/nTnDh5Aqqa6r3I4mtgdl2fxI3AdxAH7ZICuafNpOqK9qO5oTg0aRMKt3QOvAeoVkCvYn3T0g2sKzpa4ONmxKFnpI9bbfOB+l0D21PXbpckMig29ktsVsGlSDmG9iUliwcNhgzEHQDN1eKgi7IWzbyUNXMnm5REvU/d4I8Av5qSuElx9N+Fv7OWznDRaF0w/PYtSfoRMH4PGgYfkP/D5B8Bk5TkBlee1kTnJwKkzteLPwedfwEkb228ey7gz2PQGxXgcDUUeGKJnYD5iitUUpIfhz3PQDCCPKfROiPFT+9zcK5R1tPmq438P23+8HJh+00A6C5yix++9Gi/7zk45QKilQDSSD0Nd0Iu/emNDoYYdPm2GMc/1Dm+nD3ai889rPx5XlS7jz7q/7o9HrdZOAYb9+OFom/OtGHAuIUg9wr5ujYLfJLXJmnmKUCrhIRNcg94Z41c6sQVDEdaGWzWl/OnsW01s6gkoIOFsR3nOI3mTb8DFu+g47sA80fmDFD6PwRiQSJJwAVeZkO9+ZaLI7vhg6/W9aHHdNA0V7eXu3Nshx55A4uXGgNQRXFkMCsc58fNut8GY9uZALlk620HWC/9pXYbkprdnKd/gdPlIyHGLnATFfya59wY+fklK4eLTw9YqEpIZOheSrHXJCAr550NVygLXPGeYPqevHTfu5cuAnpt6vKdm/3yy6d//enfAQAA///5GGLX")
+	unpacked := packer.MustUnpack("eJzsWE2To7oV3ednzDapBMTghFTNwtAPAXbTYzyNhHaW5DbYEnY1+ANS+e8pgcFg93tvZupl9xZT3ePW1f0699wj/+dTcVizf7xlYk3Xq/LvlRSf/v2JSrck3/abSIqCoEAkeDFLgL57yWy5QheRyDjl00PKJK9fMpv6me762Xnj56HgXnyeS1HQpSmodDMK491XRFLqhaI5c382jwTFdpHgSMxlfExQUBC0sIh0CwZes7kzzeav7U+K3GOCuKAoPnLHLCmIxFe8KRl0t6tKlxTGgjt+4Tt+GS3Vz6BMkJkSEJcEmdrwfu4FOlmOzhYU8HyFzHwuL4LLuPiKIpHkce4LbcbyuCD4eeJk2oZI8RkbocZknNJv+83a0GbzpX2g8iASI3pbIXNH8GbiZNON79jaGtviJbPV/bWz2Zc+FMeVjLfctWruBSJB+hvzglMC4poBq3rZ7De+M91QYL4lwDoSeTkkxmKi7BiIK+5aKckjwa7nuCfOql8UWjk771UsZYKnnf9zgqP9S2YfaG7r3HueKRvfC3QK47rzNV/aW2rYJgZuQV1Lo7pVrHCodX9vbaLTS2Z3Mdft/dNfidU8UWM6620dW6xhKJi3mPhukTEjqghyS1Y1tT+Qpm9Bj5kWI3ZFQSiYEZ5Y/pzhxV2sRnTC4HJgxmIyjGWFI6H6MqwpO/9sHn3NM4LIicnXmcIAa7Cki64+JA9OyucKmWeOo7rrPa1vn/U5tz0Say+qEhRqbQ7RWxN3g7GP+hbexWsfOIzLxzzGPlu86Sl72l/7bqccbtq8vFjr6nLDd1OH0m9iM2sKXY182w/72MXV4HpUO+SeGYyrEWbU5wqXdYvP4XnfaWai4ZR2PthsaOfDGDRzC8iBwteJDy8nch7fTTARNF+cmBHtVujzxPdCjUBxvPOj5vnIHUtLjOnE96Itm358D0fR+SWzdeJN72K5nEhl7SgI3wn2Jz6MTgko+xkc5jo3AkGgqLERFtTgKq+J77WfPebPTswQtbJTvVzjcFCHBmclNYjAoBTrcR/eCd5NfC+uSWydOI7OHC++3w5GKYduTX7O5tjsCByeExSKG2YCQZEFSGw150czCWLzJbN3CY5SBmJtLs2UonaWiBQFh3GFDbUnYsHqDquhoDDecmhVD/wFmxhb7rvyApduwdGI08a1bDHS/1/1eoD3HhPzpd31eVib3Qo/D+5qe3azf67736EpOCQFNW6+V16kMXioKbj5p/UzCJGrEyi0m6074TgQLR6jPUe3GBJwUfiU1IiPxAvMmw0/UcALgm09yUM9ueX/niDyniwavlFzphEcvN3XiYG4ICjUqOE/8MK1bz0vXzkGJOii3/MFv/YzAda5xw8kFQXaw70c/mviQzXXcUaQq7U8RQ7UiwTbPva/x4TT4qXTJX0tjVhT999qUoo1VjkFwsn5nihu+CVNmSY0gvR65sT/RODmfy6v8em6NVtOZZDZfoLDF8XxzLDTBLzuA2Dp3LN17rDCd7ig0K05FFsG4pTJcB9U501wnf2gOqvY8hVw5Qr8ks+dad7woKHwv8lni/2XT39r5Zdcl+8Z+0CAfUOxxqTYXgXXliK1kHTBveCQgKsww0FDrqjqhUxNcKQzxzxQqB0JMtNEXgR50mWCLvWd6OnOqqKcG7L/PeEm9ZRKNydIV4R5pMjakW/65zlWRSpKonzhxW8Jt9v9uAHN+Cy0cgLEkVRm0QzBk74jKNBJFXAnt0+sFVg1h25B26WmFtyJy/itAcaAuBh0tdXTXsV8Il6z4I7EsRTJagRpxzXSC78ncFtTtSR4MVHCkYKoEUhzuWgIWi3beS5K6pi7FQ7bmjr+HyEMS4KjaoXC/684vGLpKj4qhQuKXrtYJJNW+SgSG6H0KEB+T1R0NcB/is0/QmwSnGpMugoTTZ0waEmsJ/Arzj8QmuMY7z5vSbgn5g+XBDb4gcP0jck4Jzg9dz6vi2EgAu1K4Qxnn9/n4MpRxnO3MGqiHo5GdGLbe3F6JX1h3S2VX7HJhoKkf9BdcXYnINSSVw+9xU8/ilTdjwxcUg7jNw6EtnKtiiAu1t50hIOuB0NBcr1Tzfh69mQtvnqRyeDrX+dZcXisUfuv8fG03wTt2aEAGT04Rst1dPb2CFDczNHlJtCgnq5A/JbgoEruBdoVIz1PgH6ZDrDSxawe788/IBwHdjeRVRHU8naDpVFerbjrd9eP2EBXS/AP+ulsHLOp8c8L2rhm0N2Sxff75jgUuBMW0wanDd98z8OSjvTBb/J6t2PGYmfEA/2OHInyR5EYDOdjdO8NZ30+vRAlWO1Qq1KzyEEq6Ha/WUK3XraP3n2ASzrKp/2Cp5lHjLWD7ySyFXCDOi83eSf8GvEF4iLBoaZ2KUFulYBNPm9i4BVB0YFVjXBrRfGy+b35UkY9alYOOzibL18+/fcv/wsAAP//t1Zo3g==")
 	SupportedMap = make(map[string]bool)
 
 	for f, v := range unpacked {
