@@ -16,7 +16,7 @@ outputs:
     ca_sha256: "7lHLiyp4J8m9kw38SJ7SURJP4bXRZv/BNxyyXkCcE/M="
 
 inputs:
-  - type: logs
+  - type: logfile
     streams:
     - paths:
       - /var/log/hello1.log
